Finalizado a secão Pizza do Site

--- a/assets/css/layout.css
+++ b/assets/css/layout.css
@@ -84,7 +84,7 @@ header div#chamada {
 
 section#domingo-perfeito {
     width: 100%;
-    padding: 40px 0 80%;
+    padding: 40px 0 80px;
     display: flex;
     justify-content: space-around;
     flex-flow: row wrap;
@@ -175,4 +175,29 @@ section#domingo-perfeito div.pontos-chaves ion-icon {
     width: 75px;
     height: 75px;
     color: #F03733;
+}
+
+section#pizza {
+    background: linear-gradient(rgba(0,0,0,0.7), rgba(0,0,0,0.4)), url('../img/secao10-background-secao-pizza.jpg');
+    background-size: cover;
+    padding: 40px 0 80px;
+    display: flex;
+    flex-direction: column;
+    flex-wrap: nowrap;
+    justify-content: flex-start;
+    align-items: center;
+    clip-path: polygon(0 3%, 100% 0, 100% 97%, 0 100%);
+}
+
+div#pizza-opcoes-mestre {
+    width: 80%;
+    margin-top: 30px;
+    display: flex;
+    flex-flow: row wrap;
+}
+
+div.pizza-opcoes {
+    width: 33.3%;
+    text-align: center;
+    margin: 5px 0;
 }
