--- a/assets/css/tipografia.css
+++ b/assets/css/tipografia.css
@@ -87,3 +87,16 @@ div.pontos-chaves h4::after {
     margin: 20px auto 10px;
     content: " ";
 }
+
+section#pizza p.destaque {
+    color: #FFF;
+    width: 40%;
+}
+
+section#pizza ul li {
+    color: #FFF;
+    list-style: none;
+    line-height: 1.9;
+    font-size: 90%;
+    text-transform: uppercase;
+}
