Finalizado a seção Depoimentos

--- a/assets/css/tipografia.css
+++ b/assets/css/tipografia.css
@@ -100,3 +100,7 @@ section#pizza ul li {
     font-size: 90%;
     text-transform: uppercase;
 }
+
+section#testemunha p.destaque {
+    width: 40%;
+}
