--- a/assets/css/layout.css
+++ b/assets/css/layout.css
@@ -314,3 +314,101 @@ div#transicao-testemunho-plano div#decoracao3 {
     height: 100%;
     background: url('../img/secao13-detalhe-tomate.jpg') no-repeat bottom right;  
 }
+
+section#plano-principal {
+    width: 100%;
+    padding: 40px 0 80px;
+}
+
+div#planos-janela {
+    width: 80%;
+    margin: 30px auto;
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: center;
+}
+
+div.planos {
+    width: 250px;
+    height: 450px;
+    margin: 80px 30px;
+}
+
+div.planos-top {
+   width: 250px;
+   height: 350px;
+   background-color: #F7F7F7; 
+   border-top-left-radius: 20px;
+   border-top-right-radius: 20px;
+   text-align: center;
+   box-shadow: 2px 2px 3px #CCC;
+}
+
+div.planos-bottom {
+    width: 250px;
+    height: 100px;
+    border-bottom-left-radius: 20px;
+    border-bottom-right-radius: 20px;
+    background-color: #078C31;
+    box-shadow: 2px 2px 3px #CCC;
+    cursor: pointer;
+}
+
+div#transicao-plano-rodape {
+    width: 100%;
+    height: 36px;
+    background: linear-gradient(rgba(255,255,255,1), rgba(255,255,255,0.5)), url('../img/secao15-mesa-xadrez-clara.png') repeat-x;
+    margin-top: 100px;
+}
+
+footer {
+    width: 100%;
+    height: 500px;
+    padding-top: 36px;
+    padding-left: 36px;
+    background: url('../img/secao15-mesa-xadrez.png');
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: space-between;
+    border-bottom: 10px solid #F03733;
+}
+
+footer div#mapa {
+    width: 35%;
+    height: 390px;
+    background-color: rgba(255, 255, 255, 1);
+    box-shadow: 0 3px 10px #404040;
+}
+
+footer div#info {
+    width: 30%;
+    height: 390px;
+    background-color: #F03733;
+    box-shadow: 0 3px 10px #404040;
+}
+
+footer div#redes-sociais {
+    width: 100%;
+    height: 70px;
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: space-evenly;
+}
+
+footer div#redes-sociais ion-icon {
+    color: #FFF;
+    width: 20%;
+    height: 100%;
+    cursor: pointer;
+}
+
+footer div#redes-sociais ion-icon:hover {
+    color: #F2B705;
+} 
+
+footer div#pizza-rodape-decoracao {
+    width: 300px;
+    height: 390px;
+    margin-top: -100px;
+    background: url('../img/secao15-pizza-rodape.png') no-repeat;
+}
