--- a/assets/css/tipografia.css
+++ b/assets/css/tipografia.css
@@ -105,3 +105,38 @@ section#testemunha p.destaque {
     width: 40%;
     background-color: rgba(255, 255, 255, 0.7);
 }
+
+section#plano-principal h4 {
+    color: #D90404;
+}
+
+section#plano-principal ul {
+    margin-top: 25px;
+}
+
+section#plano-principal ul li {
+    font-size: 85%;
+    text-align: left;
+    margin-left: 30px;
+    line-height: 2;
+    text-decoration: none;
+}
+
+section#plano-principal div.planos-bottom p {
+    color: #FFF;
+    font-weight: 600;
+    text-transform: uppercase;
+    text-align: center;
+    padding: 35px;
+} 
+
+footer div#info ul {
+    margin-left: 15px;
+    margin-bottom: 120px;
+}
+
+footer div#info li {
+    list-style: none;
+    color: #FFF;
+    margin-bottom: 5px;
+}
