--- a/assets/css/tipografia.css
+++ b/assets/css/tipografia.css
@@ -57,12 +57,20 @@ p.destaque {
 header div#chamada h1 {
     color: #FFF;
     text-shadow: 4px 6px 10px #000;
+    animation-name: HeaderH1-moverParaDireita;
+    animation-duration: 2s;
+    animation-timing-function: ease-out;
 }
 
 header div#chamada h4 {
     font-size: 250%;
     text-shadow: 4px 6px 10px #000;
     margin-bottom: 55px;
+    animation-name: HeaderH4-moverParaEsquerda;
+    animation-duration: 1.5s;
+    animation-delay: 0.5s;
+    animation-timing-function: ease-out;
+    animation-fill-mode: backwards;
 }
 
 header div#chamada a {
@@ -72,7 +80,13 @@ header div#chamada a {
     background: linear-gradient(rgba(7,140,49,55) 0%, rgba(6,89,2,35) 50%, rgba(6,89,2,35) 100%);
     padding: 20px 80px;
     border-radius: 50px;
+    display: inline-block;
     font-weight: 600;
+    animation-name: HeaderA-moverParaCima;
+    animation-duration: 1s;
+    animation-delay: 1s;
+    animation-timing-function: ease-out;
+    animation-fill-mode: backwards;
 }
 
 div.pontos-chaves h4 {
@@ -91,6 +105,7 @@ div.pontos-chaves h4::after {
 section#pizza p.destaque {
     color: #FFF;
     width: 40%;
+    opacity: 0;
 }
 
 section#pizza ul li {
